# com.etendoerp.copilot

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  .pylintrc  Course ES.md  Course.md  Dockerfile  Makefile  README.md  README_Dynamic_MCP.md  base.Dockerfile  bitbucket-pipelines.yml  build.gradle  cleanSymLinks.sh  config.gradle  copilot_start.sh  demo_dynamic_mcp.py  doToolSymLinks.sh  full.dockerfile  get_versions.py  jenkinsExtraModules.txt  local_setup.py  pyproject.toml  requirements.txt  run.py  script.sql  server.py  sonar-project.properties  tasks.gradle  test.sh  test_algolia_mcp.py  test_algolia_mcp_auto_headers.py  test_mcp_integration.py  tools_config.json  tools_deps.toml  tox.ini
.github/workflows/: build-base-image.yml  docker-build.yml  validate-experimental.yml
code-index-examples/: CorrectedJavaCode.java  ImprovedJavaCode.java  corrected_python_code.py  improved_python_code.py
com.etendoerp.copilot.chat/: package.json  tailwind.config.js  vite.config.ts
com.etendoerp.copilot.chat/src/: App.css  App.tsx
com.etendoerp.copilot.chat/src/components/: AssistantDropdown.tsx  CodeComponent.tsx  ConversationsSidebar.tsx
com.etendoerp.copilot.chat/src/hooks/: index.ts  useArchivedConversations.tsx  useAssistants.tsx  useConversations.tsx
com.etendoerp.copilot.chat/src/interfaces/: IAssistant.ts  IConversation.ts  ILabels.ts  IMessage.ts  index.ts
com.etendoerp.copilot.chat/src/utils/: references.ts  styles.ts
compose/: com.etendoerp.copilot.litellm.yml  com.etendoerp.copilot.ollama.yml  com.etendoerp.copilot.yml
copilot/: __init__.py  app.py  config.py  handlers.py  test_copilot_core.py
copilot/baseutils/: logging_envvar.py
copilot/core/: __init__.py  agent.py  bastian_tool.py  etendo_utils.py  exceptions.py  kb_utils.py  local_history.py  retrieval_tool.py  routes.py  schemas.py  splitters.py  threadcontext.py  threadcontextutils.py  threadutils.py  tool_dependencies.py  tool_input.py  tool_installer.py  tool_loader.py  tool_manager.py  tool_wrapper.py  utils.py  vectordb_utils.py  xml_translator_tool.py
copilot/core/agent/: __init__.py  agent.py  agent_utils.py  assistant_agent.py  langchain_agent.py  langgraph.json  langgraph_agent.py  multimodel_agent.py  openapi_consumer_agent.py
copilot/core/genui/: genui_route.py  genui_types.py
copilot/core/langgraph/: copilot_langgraph.py  members_util.py
copilot/core/mcp/: README.md  README_DYNAMIC.md  __init__.py  auth_provider.py  auth_utils.py  dynamic_manager.py  manager.py  oauth_login.py  oauth_provider.py  server.py  simplified_dynamic_manager.py  simplified_dynamic_server.py  simplified_dynamic_utils.py  utils.py
copilot/core/memory/: memory_handler.py
copilot/core/schema/: graph_member.py
copilot/core/toolgen/: ApiTool.py  __init__.py  api_tool_util.py  openapi_tool_gen.py
copilot/core/utils/: agent.py  etendo_utils.py  models.py  profiling.py
copilot/templates/: 404.html  500.html
dataset/D250A40AB629492AA2F751374D6B9359/: conversations.json
docs/: MCP_SETUP.md
evaluation/: README.md  bulk_tasks_eval.py  chat_history.csv  common_utils.py  context.md  execute.py  execution_utils.py  gen_variants.py  schemas.py  template_utils.py  test_lang_supervisor.py  test_supervisor_output.py  utils.py
lang_test/: conextion_assistant.py  config.py  connection.py  pyproject.toml  run_test.sh  test.py
legal/: LEGAL.md
litellm/: litellm_config.yaml
pipelines/run-tests/: Jenkinsfile  build-update.sh
referencedata/standard/: AI_Models_Dataset.xml  Bastian_App.xml
src-db/database/sourcedata/: AD_AUXILIARINPUT.xml  AD_COLUMN.xml  AD_DATASET.xml  AD_DATASET_COLUMN.xml  AD_DATASET_TABLE.xml  AD_ELEMENT.xml  AD_FIELD.xml  AD_FIELDGROUP.xml  AD_MENU.xml  AD_MESSAGE.xml  AD_MODEL_OBJECT.xml  AD_MODEL_OBJECT_MAPPING.xml  AD_MODULE.xml  AD_MODULE_DEPENDENCY.xml  AD_PACKAGE.xml  AD_PREFERENCE.xml  AD_PROCESS.xml  AD_REFERENCE.xml  AD_REF_LIST.xml  AD_REF_TABLE.xml  AD_TAB.xml  AD_TABLE.xml  AD_TABLE_TREE.xml  AD_TREENODE.xml  AD_VAL_RULE.xml  AD_WINDOW.xml  ETAPI_OPENAPI_FLOW.xml  ETAPI_OPENAPI_FLOWPOINT.xml  ETAPI_OPENAPI_REQ.xml  ETASK_EVENTS.xml  ETASK_STATE.xml  ETASK_TASK_STATUS.xml  ETASK_TASK_TYPE.xml  ETCOP_APP.xml  ETCOP_APP_SOURCE.xml  ETCOP_APP_TOOL.xml  ETCOP_FILE.xml  ETCOP_OPENAI_MODEL.xml  ETCOP_TOOL.xml  ETRX_OPENAPI_TAB.xml  (+8 more)
src/templates/: copilot_widget_component.js.ftl
temp_tests/: .gitignore
tests/: EVALUATION_TESTS_README.md  REFACTOR_SUMMARY.md  conftest.py  run_evaluation_tests.py  test_agent.py  test_agent_utils.py  test_api_tool.py  test_assistant_agent.py  test_attach_file_tool.py  test_auth_provider.py  test_auth_utils.py  test_codbar_tool.py  test_copilot_core.py  test_create_references_tool.py  test_custom_hello_world_multi_args_tool.py  test_db_query_generator.py  test_eval_utils.py  test_evaluation_bulk_tasks.py  test_evaluation_execute.py  test_evaluation_gen_variants.py  test_evaluation_schemas.py  test_evaluation_utils.py  test_example_tool.py  test_exceptions.py  test_file_copy_tool.py  test_file_downloader_tool.py  test_genui_route.py  test_hello_world_tool.py  test_langchain_agent.py  test_langgraph.py  test_langgraph_agent.py  test_langgraph_endpoint.py  test_local_files.py  test_local_history.py  test_logging_envvar.py  test_mcp_auth_query_param.py  test_mcp_auth_utils.py  test_mcp_config.py  test_mcp_init.py  test_mcp_resources_base.py  (+45 more)
tests/fixtures/assistants/: setup.yaml  (+2 more)
tests/resources/: openapi1.json
tools/: CustomHelloWorldMultiArgsTool.py  DownloadFileFromOpenAITool.py  ExampleTool.py  HelloWorldTool.py  OCRAdvancedTool.py  ReadFileTool.py  SchemaForgeUITool.py  SearchFileByIdTool.py  SimpleOcrTool.py  WriteFileTool.py  XML_translation_tool.py  __init__.py  hello_world.py  ocr.py  ocr_assistent_tool.py
tools/bastian/: app.py  setup.py
tools/schemas/: __init__.py  invoice.py  testdocument.py
web/com.etendoerp.copilot.chat/: .env.template  README.md  index.html  package.json  tailwind.config.js  vite.config.ts
web/com.etendoerp.copilot.dist/: copilot.css  copilot.js  index.html
web/styles/: style.css
(+406 files in other folders)
