[tool.poetry]
package-mode = false
name = "etendo-copilot-core"
version = "0.1.0"
description = ""
authors = ["sebastianbarrozo <sebastian.barrozo@etendo.software>"]
readme = "README.md"
packages = [{include = "copilot"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
pydantic = "^2.2.1"
fastapi = "^0.115.4"
uvicorn = "^0.34.0"
langchain = "^0.3.6"
toml = "^0.10.2"
packaging = "^24.1"
openai = "^1.61.0"
langchain-openai = "^0.3.3"
langchain-google-genai = "^2.0.9"
langchain-community = "^0.3.4"
langgraph = "^0.2.43"
grandalf = "^0.8"
aiosqlite = "^0.20.0"
tox = "^4.23.2"
setuptools = "^75.3.0"
ipython = "^8.25.0"
nest-asyncio = "^1.6.0"
pylint = "^3.2.5"

chromadb = "^0.6.3"
pymupdf = "^1.24.9"
langchain-core = "^0.3.33"
langsmith = "^0.3.3"
python-multipart = "^0.0.20"
poetry-core = "^2.0.1"
langgraph-checkpoint-sqlite = "^2.0.3"
debugpy = "^1.8.7"
colorama = "^0.4.6"
langchain-experimental = "^0.3.2"
frontend = "^0.0.3"
requests-mock = "^1.12.1"
pytest-mock = "^3.14.0"
pyfiglet = "^1.0.2"
pre-commit = "^4.0.1"
tomli = "^2.0.2"
langchain-chroma = "^0.2.1"
langchain-anthropic = "^0.3.5"
langchain-ollama = "^0.2.3"
langchain-text-splitters = "^0.3.5"
requests = "^2.32.3"
curlify = "^2.2.1"
langchain-deepseek = "^0.1.1"
[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
ipython = "^8.14.0"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"




[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.black]
line-length = 110
exclude = '''
/(
    \.git
  | \.hg
  | \.sh
  | \.mypy_cache
  | \.venv
  | Dockerfile
  | _build
  | build
  | dist
)/
'''

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]


[tool.ruff.isort]
known-third-party = ["copilot"]
