[project]
name = "etendo-copilot-core"
version = "0.1.0"
description = ""
authors = [{ name = "sebastianbarrozo", email = "sebastian.barrozo@etendo.software" }]
requires-python = "~=3.10"
readme = "README.md"
dependencies = [
    "python-dotenv>=1.0.0,<2",
    "pydantic>=2.2.1,<3",
    "fastapi>=0.115.4,<0.116",
    "uvicorn>=0.34.0,<0.35",
    "langchain>=0.3.20,<0.4",
    "toml>=0.10.2,<0.11",
    "packaging~=24.1",
    "openai>=1.65.1,<2",
    "langchain-openai>=0.3.9,<0.4",
    "langchain-google-genai>=2.0.9,<3",
    "langchain-community>=0.3.18,<0.4",
    "langgraph>=0.3.5,<0.4",
    "grandalf>=0.8,<0.9",
    "aiosqlite>=0.21.0,<0.22",
    "tox>=4.23.2,<5",
    "setuptools>=78.1.0,<79",
    "ipython>=8.25.0,<9",
    "nest-asyncio>=1.6.0,<2",
    "pylint>=3.2.5,<4",
    "chromadb>=0.6.3,<0.7",
    "pymupdf>=1.24.9,<2",
    "langchain-core>=0.3.43,<0.4",
    "langsmith>=0.3.3,<0.4",
    "python-multipart>=0.0.20,<0.0.21",
    "langgraph-checkpoint-sqlite>=2.0.5,<3",
    "debugpy>=1.8.7,<2",
    "colorama>=0.4.6,<0.5",
    "langchain-experimental>=0.3.2,<0.4",
    "frontend>=0.0.3,<0.0.4",
    "requests-mock>=1.12.1,<2",
    "pytest-mock>=3.14.0,<4",
    "pyfiglet>=1.0.2,<2",
    "pre-commit>=4.0.1,<5",
    "tomli>=2.0.2,<3",
    "langchain-chroma>=0.2.1,<0.3",
    "langchain-anthropic>=0.3.8,<0.4",
    "langchain-ollama>=0.3.0,<0.4",
    "langchain-text-splitters>=0.3.5,<0.4",
    "requests>=2.32.3,<3",
    "curlify>=2.2.1,<3",
    "langgraph-supervisor>=0.0.21,<0.0.22",
    "langgraph-checkpoint>=2.0.18,<3",
    "pip>=25.0.1,<26",
    "langmem>=0.0.21,<0.0.22",
    "black>=25.1.0,<26",
    "langchain-deepseek>=0.1.1,<0.2",
    "pandas>=2.2.3,<3",
    "langgraph-codeact>=0.1.0,<0.2",
    "restrictedpython~=8.0 ; python_version >= '3.9' and python_version < '3.14'",
    "rizaio>=0.10.0,<0.11",
    "openevals>=0.0.20,<0.0.21",
    "psycopg2-binary>=2.9.10,<3",
    "langchain-sandbox>=0.0.4,<0.0.5",
    "monotonic~=1.6",
    "fastmcp>=2.10.6",
    "pytest-dotenv>=0.5.2",
    "langchain-mcp-adapters>=0.1.9",
    "jwt>=1.4.0",
    "objgraph>=3.6.2",
    "memory-profiler>=0.61.0",
    "pillow>=12.0.0,<13",
    "sentence-transformers>=5.1.2",
]

[dependency-groups]
dev = [
    "pytest>=7.3.1,<8",
    "pytest-asyncio>=0.23.7,<0.24",
    "pytest-cov>=5.0.0,<6",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "PyPI"
url = "https://pypi.org/simple/"
default = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.sdist]
include = ["copilot"]

[tool.hatch.build.targets.wheel]
include = ["copilot"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 110
exclude = '''
/(
    \.git
  | \.hg
  | \.sh
  | \.mypy_cache
  | \.venv
  | Dockerfile
  | _build
  | build
  | dist
)/
'''

[tool.ruff]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "TID252", # ban relative imports (force absolute)
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-third-party = ["copilot"]
